# akai-fs

./: .gitignore  CMakeLists.txt  README.md  TASKS.md  akaiutil.c  akaiutil.h  akaiutil_file.c  akaiutil_file.h  akaiutil_take.c  commoninclude.h  debug-tracing.md  original-version.md  run.sh
akaifs/: fuse_operations.cc  fuse_operations.h  main.cc
akaiutil/: akaiutil.c  akaiutil.cc  akaiutil_file.c  akaiutil_file.cc  akaiutil_io.c  akaiutil_main.c  akaiutil_main.cc  akaiutil_take.cc  akaiutil_tar.c  akaiutil_wav.cc  commonlib.cc
archive/: Makefile
include/akaiutil/: akaiutil.h  akaiutil_file.h  akaiutil_io.h  akaiutil_take.h  akaiutil_tar.h  akaiutil_trace.h  akaiutil_wav.h
